--- a/ex-2/style.css
+++ b/ex-2/style.css
@@ -1,1 +1,36 @@
 /* Start coding here */
+* {
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+.lightgrey-box {
+    width: 100vw;
+    height: 100vh;
+    border: 16px solid lightgray;
+}
+
+.black-box {
+    width: 100%;
+    height: 100%;
+    border: 16px solid black;
+}
+
+.crimson-box {
+    width: 100%;
+    height: 100%;
+    border: 24px solid crimson;
+}
+
+.khaki-box {
+    background-color: khaki;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+h1 {
+    font-size: 72px;
+    padding: 30px;
+}
